made fragment for generating teams. so far it can show the selected players, just not in live time as you click them. i think i also made a proper heading for the regular team leaderboard recyclerview

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -46,5 +46,13 @@
         <action
             android:id="@+id/action_homeFragment_to_listFragment"
             app:destination="@id/listFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_generateTeamFragment"
+            app:destination="@id/generateTeamFragment" />
     </fragment>
+        <fragment
+        android:id="@+id/generateTeamFragment"
+        android:name="com.example.ahmcricfinale.fragments.generateTeamFragment.generateTeamFragment"
+        android:label="fragment_generate_team"
+        tools:layout="@layout/fragment_generate_team" />
 </navigation>
