--- a/app/src/main/res/layout/fragment_generate_team.xml
+++ b/app/src/main/res/layout/fragment_generate_team.xml
@@ -134,7 +134,8 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your players"
+        android:layout_marginTop="16dp"
+        android:text="Generate teams"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="italic"
@@ -143,20 +144,32 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.16000003" />
+        app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/addPlayerBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorPrimary"
-        android:text="Add"
-        android:textColor="#FFFFFF"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewGenerateTeams"
+        android:layout_width="312dp"
+        android:layout_height="150dp"
+        android:background="#333333"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerViewTable"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintVertical_bias="0.24000001" />
+
+    <ImageButton
+        android:id="@+id/deleteBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#000000"
+        android:contentDescription="deleteBtn"
+        android:src="@drawable/ic_baseline_delete_24"
+        android:tint="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerViewGenerateTeams"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.86"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTable" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
