--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="312dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/recyclerViewTable"
+        app:layout_constraintBottom_toTopOf="@id/recyclerViewPlayerTable"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -120,7 +120,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewTable"
+        android:id="@+id/recyclerViewPlayerTable"
         android:layout_width="312dp"
         android:layout_height="212dp"
         android:background="#333333"
@@ -145,6 +145,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.16000003" />
 
+    <TextView
+        android:id="@+id/listSize"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="fuck you"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.19999999" />
+
     <Button
         android:id="@+id/addPlayerBtn"
         android:layout_width="wrap_content"
@@ -155,7 +170,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTable"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewPlayerTable"
         app:layout_constraintVertical_bias="0.25" />
 
 
