--- a/app/src/main/res/layout/row_item_generate.xml
+++ b/app/src/main/res/layout/row_item_generate.xml
@@ -5,7 +5,8 @@
     android:id="@+id/rowLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#000000"
+    android:background="#79CC7C"
+    android:elevation="100dp"
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
 
@@ -16,9 +17,10 @@
         android:layout_weight="1"
         android:text="Johnathan"
         android:textColor="#FFFFFF"
-        android:textSize="18sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.11"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
