--- a/app/src/main/res/menu/delete_menu.xml
+++ b/app/src/main/res/menu/delete_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/menu_delete"
+    <item android:id="@+id/delete_menu"
         android:title="Delete"
         android:icon="@drawable/ic_baseline_delete_24"
         app:showAsAction="never"/>
