--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,12 +8,12 @@
     <color name="purple_500">#F67066</color>
     <color name="purple_700">#F67066</color>
     <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="teal_700">#0097A7</color>
+    <color name="yellow_700">#AFB42B</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#79CC7C</color>
 
-    <color name="lowest_tip">#FF2222</color>
-    <color name="highest_tip">#00ED0A</color>
 </resources>
 
 
