--- a/app/src/main/res/layout/team_name_item_list.xml
+++ b/app/src/main/res/layout/team_name_item_list.xml
@@ -5,8 +5,7 @@
     android:id="@+id/rowLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#79CC7C"
-    android:elevation="100dp"
+    android:background="#000000"
     android:paddingTop="10dp"
     android:paddingBottom="10dp">
 
@@ -14,15 +13,13 @@
         android:id="@+id/globalTeamName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_weight="1"
-        android:text="Johnathan"
+        android:text="The Cricketeers"
         android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.11"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
