--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -5,8 +5,10 @@
     android:id="@+id/generateConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:background="#000000"
+
+
+    android:orientation="vertical"
     tools:context=".fragments.game.GameFragment">
 
     <TextView
@@ -16,6 +18,7 @@
         android:layout_marginTop="16dp"
         android:text="Log games"
         android:textColor="#FFFFFF"
+        android:foreground="@drawable/dimmer"
         android:textSize="24sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,27 +29,28 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="312dp"
+        android:id="@+id/constraintLayout2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/recyclerViewPlayerTable"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerViewPlayerTable"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="1">
+        app:layout_constraintTop_toBottomOf="@+id/textView2">
 
         <TextView
             android:id="@+id/firstNameHeader_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_weight="1"
             android:text="Player"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/wins_txt"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
@@ -55,15 +59,13 @@
             android:id="@+id/wins_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="64dp"
+            android:layout_marginStart="128dp"
             android:layout_weight="1"
             android:text="W"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/losses_txt"
-            app:layout_constraintHorizontal_bias="0.69"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
@@ -72,15 +74,13 @@
             android:id="@+id/losses_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="64dp"
+            android:layout_marginStart="156dp"
             android:layout_weight="1"
             android:text="L"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/draws_txt"
-            app:layout_constraintHorizontal_bias="0.71"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
@@ -89,15 +89,13 @@
             android:id="@+id/draws_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="64dp"
+            android:layout_marginStart="200dp"
             android:layout_weight="1"
             android:text="D"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/matches_txt"
-            app:layout_constraintHorizontal_bias="0.77"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
@@ -106,15 +104,13 @@
             android:id="@+id/matches_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="64dp"
+            android:layout_marginStart="256dp"
             android:layout_weight="1"
             android:text="M"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/winLossRatio_txt"
-            app:layout_constraintHorizontal_bias="0.84"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
@@ -123,14 +119,13 @@
             android:id="@+id/winLossRatio_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="300dp"
             android:layout_weight="1"
             android:text="W/R"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
@@ -139,9 +134,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPlayerTable"
-        android:layout_width="312dp"
+        android:layout_width="0dp"
+
         android:layout_height="212dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         android:background="#333333"
+        android:foreground="@drawable/dimmer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -152,9 +151,14 @@
 
     <Button
         android:id="@+id/addToTeamABtn"
+        android:foreground="@drawable/dimmer"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:backgroundTint="@color/colorAccent"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:text="Add to Team A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
@@ -163,9 +167,14 @@
 
     <Button
         android:id="@+id/addToTeamBBtn"
+        android:foreground="@drawable/dimmer"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:backgroundTint="@color/colorAccent"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:text="Add to Team B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.83"
@@ -178,37 +187,23 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#000000"
         android:contentDescription="deleteBtn"
+        android:foreground="@drawable/dimmer"
         android:src="@drawable/ic_baseline_delete_24"
         android:tint="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.86"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="1.0" />
 
-
-    <ImageButton
-        android:id="@+id/addAllBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#000000"
-        android:contentDescription="addAllBtn"
-        android:src="@drawable/ic_baseline_select_all_24"
-        android:tint="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.17"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/startGameCardView"
         android:layout_width="300dp"
         android:layout_height="350dp"
         android:visibility="gone"
-        app:cardBackgroundColor="@color/yellow_700"
+        app:cardBackgroundColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -251,7 +246,7 @@
                 <TextView
                     android:id="@+id/teamAMembersTxt"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="0dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
@@ -290,7 +285,7 @@
 
                 <TextView
                     android:id="@+id/teamBMembersTxt"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginStart="16dp"
@@ -306,6 +301,7 @@
                 android:id="@+id/finishBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorAccent"
                 android:text="Finish"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -319,11 +315,12 @@
                 android:id="@+id/suspendBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorAccent"
                 android:text="Suspend"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.9"
+                app:layout_constraintHorizontal_bias="0.90"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/scrollB"
                 app:layout_constraintVertical_bias="0.0" />
@@ -333,6 +330,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:backgroundTint="@color/colorAccent"
                 android:text="Team A"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -344,7 +342,8 @@
                 android:id="@+id/teamBWonBtn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="TeamB"
+                android:backgroundTint="@color/colorAccent"
+                android:text="Team B"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/teamAWonBtn"
@@ -355,6 +354,7 @@
                 android:id="@+id/drawBtn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorAccent"
                 android:text="Draw"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -366,6 +366,7 @@
 
     <Button
         android:id="@+id/startBtn"
+        android:foreground="@drawable/dimmer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -384,8 +385,8 @@
         android:id="@+id/congratsGameCardView"
         android:layout_width="300dp"
         android:layout_height="200dp"
-        android:visibility="gone"
-        app:cardBackgroundColor="@color/yellow_700"
+        android:visibility="invisible"
+        app:cardBackgroundColor="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -438,6 +439,7 @@
                 android:id="@+id/closeBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorAccent"
                 android:text="Close"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -511,8 +513,6 @@
             app:layout_constraintTop_toBottomOf="@+id/addToTeamABtn"
             app:layout_constraintVertical_bias="0.0" />
     </ScrollView>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
